--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ python-telegram-bot==20.7
 openai==1.3.5
 python-dotenv==1.0.0
 pydub==0.25.1
-requests==2.31.0 
+requests==2.31.0
+aiofiles==23.2.1 
